--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-Man
+<h1>Welcome to Limeoats.com</h1>
 </body>
 </html>
