--- a/index.html
+++ b/index.html
@@ -4,5 +4,47 @@
 </head>
 <body>
 <h1>Welcome to Limeoats.com</h1>
+<hr />
+<br />
+<div id="aboutme" class="section">
+  <h2>Who am I?</h2>
+  <div class="subsection">
+    <h3>I'm Mark and I like programming.</h3>
+      <p>
+        As the title suggests, my name is Mark and I like programming. I spend
+        a great deal of my time doing all sorts of programming, including game
+        development, web development, virtual reality, and much more.
+      </p>
+  </div>
+</div>
+<div id="donations" class="section">
+  <h2>Donations</h2>
+  <div class="subsection">
+    <h3>Any amount is appreciated</h3>
+      <p>
+        If you're feeling generous and would like to support my development
+        projects, you can donate by <a href="#"
+         target="_blank">clicking here</a>.
+        <br />Every donation that comes my way means a lot to me.
+      </p>
+  </div>
+</div>
+<div id="currentprojects" class="section">
+  <h2>Current Projects</h2>
+  <div class="subsection">
+    <h3>Remaking Cavestory in C++</h3>
+    <p>
+      Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
+      <a href="#">Click here</a> for more information.
+    </p>
+    <br />
+    <hr />
+    <h3>Virtual Reality</h3>
+    <p>
+      I'm conducting research related to virtual environments with a professor at
+      my old college. <br />
+      <a href="#">Click here</a> to see what we've come up with.
+    </p>
+</div>
 </body>
 </html>
