--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Limeoats | Home</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -11,11 +12,12 @@
   <div class="subsection">
     <h3>I'm Mark and I like programming.</h3>
       <p>
-        As the title suggests, my name is Mark and I like programming. I spend
+        As the title suggests, my name is Mark and I like programming I spend
         a great deal of my time doing all sorts of programming, including game
         development, web development, virtual reality, and much more.
       </p>
   </div>
+  <hr />
 </div>
 <div id="donations" class="section">
   <h2>Donations</h2>
@@ -23,11 +25,12 @@
     <h3>Any amount is appreciated</h3>
       <p>
         If you're feeling generous and would like to support my development
-        projects, you can donate by <a href="#"
+        projects, you can donate by <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA"
          target="_blank">clicking here</a>.
         <br />Every donation that comes my way means a lot to me.
       </p>
   </div>
+  <hr />
 </div>
 <div id="currentprojects" class="section">
   <h2>Current Projects</h2>
@@ -37,7 +40,6 @@
       Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
       <a href="#">Click here</a> for more information.
     </p>
-    <br />
     <hr />
     <h3>Virtual Reality</h3>
     <p>
@@ -45,6 +47,49 @@
       my old college. <br />
       <a href="#">Click here</a> to see what we've come up with.
     </p>
+  </div>
+  <hr />
+</div>
+<div id="finishedprojects" class="section">
+  <h2>Finished Projects</h2>
+  <div class="subsection">
+    <h3>A Note For Lime</h3>
+    <p>
+      For our one year anniversary, I made my girlfriend a game.
+      <br />
+      <a href="#">Click here</a> to check it out.
+    </p>
+  </div>
+  <hr />
+</div>
+<div id="links" class="section">
+  <h2>Links</h2>
+  <div class="subsection">
+    <h3>Some important links that may interest you</h3>
+    <p>
+      <ul>
+        <li><a href="https://twitter.com/limeoats" target="_blank">Twitter</a></li>
+        <li><a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank">Youtube</a></li>
+        <li><a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/limeoats" target="_blank">Github</a></li>
+      </ul>
+    </p>
+  </div>
+  <hr />
+</div>
+<div id="contact" class="section">
+  <h2>Contact me</h2>
+  <div class="subsection">
+    <h3>If you'd like to contact me, you can...</h3>
+    <p>
+      <ul>
+      <li>Tweet at me <a href="https://twitter.com/limeoats" target="_blank">@Limeoats</a></li>
+      <li>Send an email to <a href="mailto:oats@limeoats.com">oats@limeoats.com</a></li>
+    </ul>
+    </p>
+</div>
+<div id="copyright" style="margin-top: 80px;">
+  <span style="font-size: 10pt;">&copy; 2012-2015 Limeoats</span>
 </div>
 </body>
 </html>
