--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Limeoats | Home</title>
+    <title>Limeoats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,89 +13,83 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Limeoats</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Mark Guerra</h2>
     </section>
-
     <section class="main-content">
-      <h3>
-<a id="welcome" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Limeoats.com</h3>
-
-<p>Hello! My name is Mark and I like programming. I spend a great deal of my time
- doing all sorts of programming, including game development, web development, virtual reality,
- and much more.</p>
-
-<h3>
-<a id="donations" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Donations</h3>
-
-<p>If you're feeling generous and would like to support my development projects, you can donate by
-    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank">clicking here.</a>
-<br />Every donation that comes my way means a lot to me and any amount is appreciated.
-</p>
-<h3>
-<a id="currentprojects" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current projects</h3>
-<div class="subsection">
-  <h4>Remaking Cavestory in C++</h4>
-  <p>
-    Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
-    <a href="#">Click here</a> for more information.
-  </p>
-  <h4>Virtual reality</h4>
-  <p>
-    I am doing research related to virtual environments with a professor at my old college.<br />
-    <a href="#">Click here</a> to see what we've come up with.
-  </p>
-</div>
-
-<h3>
-<a id="finishedprojects" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Finished projects</h3>
-<div class="subsection">
-  <h4>A Note For Lime</h4>
-  <p>
-    For our one year anniversary, I made my girlfriend a game.<br />
-    <a href="#">Click here</a> to check it out.
-  </p>
-</div>
-
-<h3>
-<a id="publications" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h3>
-<p>
-  Read through some of the work I've gotten published over the years.
-</p>
-<div class="subsection">
-  <h4>Increasing Precision for Extended Reach 3D Manipulation</h4>
-  <p>
-    One topic I've researched in virtual reality is the manipulation of objects far away from the user.<br />
-    You can read all about it by <a href="#">clicking here.</a>
-  </p>
-</div>
-
-<h3>
-<a id="contactme" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h3>
-
-<p>If you would like to contact me, you can...</p>
-<ul>
-  <li>Tweet at me <a href="https://twitter.com/limeoats" target="_blank">@Limeoats</a></li>
-  <li>Send an email to <a href="mailto:oats@limeoats.com">oats@limeoats.com</a></li>
-</ul>
-
-<h3>
-<a id="links" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h3>
-
-<p>Some important links that may interest you</p>
-<ul>
-  <li><a href="https://twitter.com/limeoats" target="_blank">Twitter</a></li>
-  <li><a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank">Youtube</a></li>
-  <li><a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank">LinkedIn</a></li>
-  <li><a href="https://github.com/limeoats" target="_blank">Github</a></li>
-</ul>
-
-      <footer class="site-footer">
-
-        <span class="site-footer-credits">&copy; 2012-2015 Limeoats</span>
-      </footer>
-
+      <div>
+        <h3>Welcome to Limeoats.com</h3>
+        <p>Hello! My name is Mark and I enjoy programming. I spend a great deal of my time
+         doing all sorts of programming, including game development, web development, virtual reality,
+         and much more.</p>
+      </div>
+      <div>
+        <h3>Donations</h3>
+        <p>If you're feeling generous and would like to support my development projects, you can donate by
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank">clicking here.</a>
+        <br />Every donation that comes my way means a lot to me and any amount is appreciated.
+        </p>
+      </div>
+      <div>
+        <h3>Current projects</h3>
+        <div class="subsection">
+          <h4>Remaking Cavestory in C++</h4>
+          <p>
+            Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
+            <a href="#" target="_blank">Click here</a> for more information.
+          </p>
+          <h4>Virtual reality</h4>
+          <p>
+            I am doing research related to virtual environments with a professor at my old college.<br />
+            <a href="#" target="_blank">Click here</a> to see what we've come up with.
+          </p>
+        </div>
+      </div>
+      <div>
+        <h3>Finished projects</h3>
+        <div class="subsection">
+          <h4>A Note For Lime</h4>
+          <p>
+            For our one year anniversary, I made my girlfriend a game.<br />
+            <a href="#" target="_blank">Click here</a> to check it out.
+          </p>
+        </div>
+      </div>
+      <div>
+        <h3>Publications</h3>
+        <p>
+          Read through some of the work I've gotten published over the years.
+        </p>
+        <div class="subsection">
+          <h4>Increasing Precision for Extended Reach 3D Manipulation</h4>
+          <p>
+            One topic I've researched in virtual reality is the manipulation of objects far away from the user.<br />
+            You can read all about it by <a href="#" target="_blank">clicking here.</a>
+          </p>
+        </div>
+      </div>
+      <div>
+        <h3>Contact me</h3>
+        <p>If you would like to contact me, you can...</p>
+        <ul>
+          <li>Tweet at me <a href="https://twitter.com/limeoats" target="_blank">@Limeoats</a></li>
+          <li>Send an email to <a href="mailto:oats@limeoats.com">oats@limeoats.com</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3>Links</h3>
+        <p>Some important links that may interest you</p>
+        <ul>
+          <li><a href="https://twitter.com/limeoats" target="_blank">Twitter</a></li>
+          <li><a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank">Youtube</a></li>
+          <li><a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/limeoats" target="_blank">Github</a></li>
+        </ul>
+      </div>
+      <div>
+        <footer class="site-footer">
+          <span class="site-footer-credits">&copy; 2012-2015 Limeoats</span>
+        </footer>
+      </div>
     </section>
-
-
   </body>
 </html>
