--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h4>Increasing Precision for Extended Reach 3D Manipulation</h4>
           <p>
             One topic I've researched in virtual reality is the manipulation of objects far away from the user.<br />
-            You can read all about it by <a href="#" target="_blank">clicking here.</a>
+            You can read all about it by <a href="downloads/ijvr2013.pdf" target="_blank">clicking here.</a>
           </p>
         </div>
       </div>
