--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Limeoats</h1>
+      <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
       <h2 class="project-tagline">Mark Guerra</h2>
+      <div class="project-icons">
+        <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
+        <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="Youtube" /></a>
+        <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
+        <a href="https://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
+        <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank"><img src="images/paypal-icon.png" title="Donations" /></a>
+      </div>
     </section>
     <section class="main-content">
       <div>
@@ -35,12 +43,12 @@
           <h4>Remaking Cavestory in C++</h4>
           <p>
             Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
-            <a href="#" target="_blank">Click here</a> for more information.
+            <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank">Click here</a> to view the videos.
           </p>
           <h4>Virtual reality</h4>
           <p>
             I am doing research related to virtual environments with a professor at my old college.<br />
-            <a href="#" target="_blank">Click here</a> to see what we've come up with.
+            <a href="virtual-reality.html">Click here</a> to see what we've come up with.
           </p>
         </div>
       </div>
@@ -50,7 +58,7 @@
           <h4>A Note For Lime</h4>
           <p>
             For our one year anniversary, I made my girlfriend a game.<br />
-            <a href="#" target="_blank">Click here</a> to check it out.
+            <a href="a-note-for-lime.html">Click here</a> to check it out.
           </p>
         </div>
       </div>
@@ -73,16 +81,6 @@
         <ul>
           <li>Tweet at me <a href="https://twitter.com/limeoats" target="_blank">@Limeoats</a></li>
           <li>Send an email to <a href="mailto:oats@limeoats.com">oats@limeoats.com</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Links</h3>
-        <p>Some important links that may interest you</p>
-        <ul>
-          <li><a href="https://twitter.com/limeoats" target="_blank">Twitter</a></li>
-          <li><a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank">Youtube</a></li>
-          <li><a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank">LinkedIn</a></li>
-          <li><a href="https://github.com/limeoats" target="_blank">Github</a></li>
         </ul>
       </div>
       <div>
