--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+
+    <script src="javascripts/main.js" type="text/javascript"></script>
   </head>
   <body>
     <section class="page-header">
@@ -85,7 +87,7 @@
       </div>
       <div>
         <footer class="site-footer">
-          <span class="site-footer-credits">&copy; 2012-2015 Limeoats</span>
+          <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
         </footer>
       </div>
     </section>
