added hrs on the page fix for linkedin link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
         <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="Youtube" /></a>
         <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
-        <a href="http://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
+        <a href="https://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
         <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank"><img src="images/paypal-icon.png" title="Donations" /></a>
       </div>
@@ -32,6 +32,7 @@
          doing all sorts of programming, including game development, web development, virtual reality,
          and much more.</p>
       </div>
+      <hr />
       <div>
         <h3>Donations</h3>
         <p>If you're feeling generous and would like to support my development projects, you can donate by
@@ -39,6 +40,7 @@
         <br />Every donation that comes my way means a lot to me and any amount is appreciated.
         </p>
       </div>
+      <hr />
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
@@ -54,6 +56,7 @@
           </p>
         </div>
       </div>
+      <hr />
       <div>
         <h3>Finished projects</h3>
         <div class="subsection">
@@ -64,6 +67,7 @@
           </p>
         </div>
       </div>
+      <hr />
       <div>
         <h3>Publications</h3>
         <p>
@@ -77,6 +81,7 @@
           </p>
         </div>
       </div>
+      <hr />
       <div>
         <h3>Contact me</h3>
         <p>If you would like to contact me, you can...</p>
