changed wording in stream faq

--- a/stream-faq.html
+++ b/stream-faq.html
@@ -33,7 +33,7 @@
         <hr />
         <h3>What kind of game are you making?</h3>
         <p>I'm making a Multiplayer 2D Top-Down Action-Adventure game (with some RPG elements mixed in there). I know that's a bit much so let me break
-            it down for you a bit.
+            it down for you.
             <ul>
                 <li>A maximum of 8 people will be able to play together at the same time.</li>
                 <li>It'll be a top-down 2D game, not a platformer. This means that the camera is above the player and you can move up, down, left, right, and diagonally.</li>
