added to stream faq

--- a/stream-faq.html
+++ b/stream-faq.html
@@ -44,6 +44,14 @@
             </ul>
         </p>
         <hr />
+        <h3>What programming languages / libraries / tools will you be using?</h3>
+        <p>
+            <ul>
+                <li><strong>Programming language: </strong>C++</li>
+                <li><strong>Libraries: </strong>SDL2 / OpenGL</li>
+                <li><strong>Tools: </strong>CLion IDE, Tiled map editor, GIMP</li>
+            </ul>
+        </p>
         <h3>What is the theme of this game?</h3>
         <p>
             I really like this question and enjoy answering it. Ever since I started making games, I've had a certain idea for a game I want to create and I finally have the
