Added downloads for A Note For Lime

--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -44,8 +44,23 @@
     <section class="main-content">
       <div>
         <h3>A Note For Lime</h3>
-        <p>This page is currently under construction. Check back in a bit!</p>
+        <img src="images/a-note-for-lime-screenshot-1.png" alt="A Note For Lime Image" />
+        <p>
+            Help Oats deliver an important note to Lime!<br /><br />
+            One year ago, Oats asked Lime to be his girlfriend and she said yes.<br /><br />
+            Now, exactly one year later, he has a note that must be delivered to her.<br /><br />
+            Help Oats make his way through 3 challenging, action-packed levels to reach his beautiful girlfriend on their anniversary.
+        </p>
+        <hr />
+        <p>
+            Download A Note For Lime by clicking the button below for your operating system!
+        </p>
+        <a href="http://bit.ly/1XRlvhu" class="limeButton" style="width: 120px;" target="_blank">Windows Download</a>
+        <a href="http://bit.ly/1NxWyGC" class="limeButton" style="width: 120px;" target="_blank">Mac OS X Download</a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank" class="limeButton" style="width: 120px;">Donate to Limeoats</a>
+        <br />
       </div>
+      <br />
       <div>
         <footer class="site-footer">
           <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
