--- a/index.html
+++ b/index.html
@@ -60,16 +60,18 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-          <h4>Remaking Cavestory in C++</h4>
-          <p>
-            Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
-            <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank">Click here</a> to view the videos.
-          </p>
-          <h4>Virtual reality</h4>
-          <p>
-            I am doing research related to virtual environments with a professor at my old college.<br />
-            <a href="virtual-reality.html">Click here</a> to see what we've come up with.
-          </p>
+            <h4>Seasons</h4>
+            <p>
+                I am currently developing a 2D Multiplayer Action-Adventure game in C++.<br />
+                More information on this coming soon. In the meantime, <a href="http://twitter.com/limeoats" target="_blank">follow me on Twitter</a> for updates!
+            </p>
+        </div>
+        <div class="subsection">
+            <h4>Project Euler</h4>
+            <p>
+                I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project Euler</a> problems.<br />
+                <a href="http://github.com/limeoats/projecteuler" target="_blank">Click here</a> to see some of my code.
+            </p>
         </div>
       </div>
       <hr />
@@ -81,6 +83,18 @@
             For our one year anniversary, I made my girlfriend a game.<br />
             <a href="a-note-for-lime.html">Click here</a> to check it out.
           </p>
+        </div>
+        <div class="subsection">
+          <h4>Remaking Cavestory in C++</h4>
+          <p>
+            Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
+            <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank">Click here</a> to view the videos.
+          </p>
+          <!-- <h4>Virtual reality</h4>
+          <p>
+            I am doing research related to virtual environments with a professor at my old college.<br />
+            <a href="virtual-reality.html">Click here</a> to see what we've come up with.
+          </p> -->
         </div>
       </div>
       <hr />
