Fixed broken download links

--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -55,8 +55,8 @@
         <p>
             Download A Note For Lime by clicking the button below for your operating system!
         </p>
-        <a href="http://bit.ly/1XRlvhu" class="limeButton" style="width: 120px;" target="_blank">Windows Download</a>
-        <a href="http://bit.ly/1NxWyGC" class="limeButton" style="width: 120px;" target="_blank">Mac OS X Download</a>
+        <a href="http://bit.ly/1Oakc8k" class="limeButton" style="width: 120px;" target="_blank">Windows Download</a>
+        <a href="http://bit.ly/1liYcBo" class="limeButton" style="width: 120px;" target="_blank">Mac OS X Download</a>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank" class="limeButton" style="width: 120px;">Donate to Limeoats</a>
         <br />
       </div>
