--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -61,6 +61,8 @@
         <br />
       </div>
       <br />
+      <div id="disqus_thread"></div>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
       <div>
         <footer class="site-footer">
           <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
