updated links on website

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <h4>Seasons</h4>
+            <a href="http://www.twitter.com/limeoats" target="_blank"><h4>Seasons</h4></a>
             <p>
                 I am currently developing a 2D Multiplayer Action-Adventure game in C++.<br />
                 More information on this coming soon. In the meantime, <a href="http://twitter.com/limeoats" target="_blank">follow me on Twitter</a> for updates!
             </p>
         </div>
         <div class="subsection">
-            <h4>Project Euler</h4>
+            <a href="http://github.com/limeoats/projecteuler" target="_blank"><h4>Project Euler</h4></a>
             <p>
                 I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project Euler</a> problems.<br />
                 <a href="http://github.com/limeoats/projecteuler" target="_blank">Click here</a> to see some of my code.
@@ -78,14 +78,14 @@
       <div>
         <h3>Finished projects</h3>
         <div class="subsection">
-          <h4>A Note For Lime</h4>
+          <a href="a-note-for-lime.html" target="_blank"><h4>A Note For Lime</h4></a>
           <p>
             For our one year anniversary, I made my girlfriend a game.<br />
             <a href="a-note-for-lime.html">Click here</a> to check it out.
           </p>
         </div>
         <div class="subsection">
-          <h4>Remaking Cavestory in C++</h4>
+          <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank"><h4>Remaking Cavestory in C++</h4></a>
           <p>
             Follow along as I remake the classic indie game Cavestory in C++ and SDL2.<br />
             <a href="https://www.youtube.com/playlist?list=PLNOBk_id22bw6LXhrGfhVwqQIa-M2MsLa" target="_blank">Click here</a> to view the videos.
@@ -104,7 +104,7 @@
           Read through some of the work I've gotten published over the years.
         </p>
         <div class="subsection">
-          <h4>Increasing Precision for Extended Reach 3D Manipulation</h4>
+          <a href="http://bit.ly/1N9dHr4" target="_blank"><h4>Increasing Precision for Extended Reach 3D Manipulation</h4></a>
           <p>
             One topic I've researched in virtual reality is the manipulation of objects far away from the user.<br />
             You can read all about it by <a href="http://bit.ly/1N9dHr4" target="_blank">clicking here.</a>
