updated stream faq with Lua

--- a/stream-faq.html
+++ b/stream-faq.html
@@ -64,7 +64,7 @@
         <h3>What programming languages / libraries / tools will you be using?</h3>
         <p>
             <ul>
-                <li><strong>Programming language: </strong>C++</li>
+                <li><strong>Programming languages: </strong>C++, Lua</li>
                 <li><strong>Libraries: </strong>SDL2 / OpenGL</li>
                 <li><strong>Tools: </strong>CLion IDE, Tiled map editor, GIMP</li>
             </ul>
