updated with new game information and stream information

--- a/stream-faq.html
+++ b/stream-faq.html
@@ -49,15 +49,13 @@
         <p>This is where you can find the answers to a bunch of questions you might have running through your head while you watch my stream!</p>
         <hr />
         <h3>What kind of game are you making?</h3>
-        <p>I'm making a Multiplayer 2D Top-Down Action-Adventure game (with some RPG elements mixed in there). I know that's a bit much so let me break
+        <p>I'm making a 2D Top-Down Action-Adventure game (with some RPG elements mixed in there). I know that's a bit much so let me break
             it down for you.
             <ul>
-                <li>A maximum of 8 people will be able to play together at the same time.</li>
                 <li>It'll be a top-down 2D game, not a platformer. This means that the camera is above the player and you can move up, down, left, right, and diagonally.</li>
                 <li>An action-adventure game basically means that all combat will happen in real time. There are no battle scenes or anything like that. When you see an enemy,
                     you attack it and defeat it (or it defeats you!).</li>
-                <li>Since it's a multiplayer game designed for maximum fun, I don't want to create too much competition by allowing some players to level up and get much stronger than other players.
-                    Therefore, the RPG elements will probably come in the form of leveling up weapons, magic, and other powerups.</li>
+                <li>The RPG elements will probably come in the form of leveling up weapons, magic, and other powerups.</li>
             </ul>
         </p>
         <hr />
@@ -66,7 +64,7 @@
             <ul>
                 <li><strong>Programming language: </strong>C++</li>
                 <li><strong>Libraries: </strong>SDL2 / OpenGL</li>
-                <li><strong>Tools: </strong>CLion IDE, Tiled map editor, GIMP</li>
+                <li><strong>Tools: </strong>CLion IDE, Tiled map editor, Photoshop</li>
             </ul>
         </p>
         <h3>What is the theme of this game?</h3>
@@ -75,14 +73,13 @@
             opportunity to do so.
             <br />
             <br />
-            There are three themes in this game:
+            There are two main themes in this game:
             <ul>
-                <li>Seasons</li>
                 <li>Dreams</li>
                 <li>Time</li>
             </ul>
             My goal when creating games is to evoke as much emotion from the player as possible. I believe that a great game is one that you <em>feel</em> for awhile
-            after playing it. These three themes, when used properly, have the ability to do exactly this.
+            after playing it. Both of these themes, when used properly, have the ability to do exactly this.
         </p>
         <hr />
         <h3>Why are you streaming the development of this game on Twitch?</h3>
@@ -98,16 +95,11 @@
         <p>
             As a matter of fact, I do!
             <br /><br />
-            I make games because I love making games. Unfortunately, however, money is a factor in my life. Any donations I receive go directly towards bills, my future wedding, and of course
+            I make games because I love making games. Unfortunately, however, money is a very real factor in my life. Any donations I receive go directly towards bills, my future wedding, and of course
             improving the stream.
             <br /><br />
             You are in no way obligated to donate. Simply watching the stream is support that I appreciate very much. Donations do keep things moving along, however, so I am very grateful
             for anything you send my way.
-            <br /><br />
-            Once the networking for my game is set up, I'll need my viewers to help with testing. I'll be randomly drawing names and giving a test client to a lucky few of you to hop in the game
-            and help me test. This will probably happen during most of my streams.
-            <br />
-            Donators will have better odds of winning as my way of saying thank you for the support.
             <br /><br />
             As always, any donation amount is greatly appreciated and helps out very much, so thank you.
         </p>
