--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="http://www.twitter.com/limeoats" target="_blank"><h4>Seasons</h4></a>
+            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>A Dream</h4></a>
             <p>
-                I am currently developing a 2D Multiplayer Action-Adventure game in C++.<br />
-                More information on this coming soon. In the meantime, <a href="http://twitter.com/limeoats" target="_blank">follow me on Twitter</a> for updates!
+                I am currently developing a 2D Action-Adventure game in C++.<br />
+                Check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon</a> page for blog posts, updates, and more regarding this project.
             </p>
         </div>
         <div class="subsection">
@@ -79,7 +79,7 @@
       <div>
         <h3>Finished projects</h3>
         <div class="subsection">
-          <a href="a-note-for-lime.html" target="_blank"><h4>A Note For Lime</h4></a>
+          <a href="a-note-for-lime.html"><h4>A Note For Lime</h4></a>
           <p>
             For our one year anniversary, I made my girlfriend a game.<br />
             <a href="a-note-for-lime.html">Click here</a> to check it out.
