--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Hello! My name is Mark and I enjoy programming. I spend a great deal of my time
+     doing all sorts of programming, including game development, web development, virtual reality,
+     and much more.">
+    <meta name="author" content="Limeoats">
 
     <script src="javascripts/main.js" type="text/javascript"></script>
   </head>
