--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -26,6 +26,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
+    <meta name="author" content="Limeoats">
 
     <script src="javascripts/main.js" type="text/javascript"></script>
   </head>
