--- a/stream-faq.html
+++ b/stream-faq.html
@@ -26,6 +26,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Read all about the game I am currently developing, as well as the live Twitch stream where you can watch the programming happen!">
+    <meta name="author" content="Limeoats">
 
     <script src="javascripts/main.js" type="text/javascript"></script>
   </head>
