added link to stream faq

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <p>
                 I am currently developing a 2D Action-Adventure game in C++.<br />
                 Check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon</a> page for blog posts, updates, and more regarding this project.
+                <br /><br />I'm also streaming the development of <em>A Dream</em> on Twitch. <a href="stream-faq.html">Click here</a> to read more about that.
             </p>
         </div>
         <div class="subsection">
