3d lagging camera unity

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
       </div>
       <hr />
       <div>
+          <h3>Writing</h3>
+          <div class="subsection">
+              <a href="http://bit.ly/1XTa6yO"><h4>3D Lagging Camera in Unity</h4></a>
+              <span class="writingDescription">A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.</span>
+          </div>
+      </div>
+      <hr/>
+      <div>
         <h3>Publications</h3>
         <p>
           Read through some of the work I've gotten published over the years.
