--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -241,6 +241,8 @@ public class CameraTracker : MonoBehaviour {
         <br/><br/>
         Happy developing :-)
         <br/><br/>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.limeoats.com/writing/3d_lagging_camera.php" data-via="Limeoats">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <br/>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES * * */
