--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -231,7 +231,7 @@ public class CameraTracker : MonoBehaviour {
         tracker correctly). When the player moves, the tracker (and camera) won't move until you are <code>DISTANCE_THRESHOLD</code> units away from it. This gives you 
         the desired camera lag!
         <br/>
-                <video width="800" height="400" autoplay="" loop="" poster="">
+                <video width="100%" height="400" autoplay="" loop="" poster="">
 				<source src="images/3d-lagging-camera/camera_video.mov">
 				<source src="images/3d-lagging-camera/camera_video.ogv">
 				Your browser does not support this video.
