--- a/index.html
+++ b/index.html
@@ -65,18 +65,17 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>A Dream</h4></a>
+            <!--<a href="http://www.patreon.com/limeoats" target="_blank">--><h4>3D Game - Coming soon!</h4><!--</a>-->
             <p>
-                I am currently developing a 2D Action-Adventure game in C++.<br />
-                Check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon</a> page for blog posts, updates, and more regarding this project.
-                <br /><br />I'm also streaming the development of <em>A Dream</em> on Twitch. <a href="stream-faq.html">Click here</a> to read more about that.
+                I will begin developing a brand new 3rd person 3D game in the very near future.
+                <br/>More information coming soon! 
             </p>
         </div>
         <div class="subsection">
             <a href="http://github.com/limeoats/projecteuler" target="_blank"><h4>Project Euler</h4></a>
             <p>
                 I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project Euler</a> problems.<br />
-                <a href="http://github.com/limeoats/projecteuler" target="_blank">Click here</a> to see some of my code.
+                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my code.
             </p>
         </div>
       </div>
@@ -131,6 +130,7 @@
         <p>If you would like to contact me, you can...</p>
         <ul>
           <li>Tweet at me <a href="https://twitter.com/limeoats" target="_blank">@Limeoats</a></li>
+          <li>Join my <a href="https://discord.gg/0g6ksoTuyf4TJKqh" target="_blank">Discord server</a></li>
           <li>Send an email to <a href="mailto:oats@limeoats.com">oats@limeoats.com</a></li>
         </ul>
       </div>
