updated with reveal of The Truth

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <!--<a href="http://www.patreon.com/limeoats" target="_blank">--><h4>3D Game - Coming soon!</h4><!--</a>-->
+            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>The Truth</h4></a>
             <p>
-                I will begin developing a brand new 3rd person 3D game in the very near future.
-                <br/>More information coming soon! 
+                The time has finally come for me to begin development of my new game, <em>The Truth</em>.<br/>
+                This will be a 3D 3rd Person Collectathon game with a strong focus on satisfying physics and enjoyable gameplay.<br/>
+                For more information, please check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.
             </p>
         </div>
         <div class="subsection">
