added bitlink for bignumber

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
           </p>
         </div>
         <div class="subsection">
-            <a href="http://github.com/limeoats/bignumber" target="_blank"><h4>BigNumber C++ Library</h4></a>
+            <a href="http://bit.ly/1qIlgvt" target="_blank"><h4>BigNumber C++ Library</h4></a>
             <p>
                 BigNumber is a C++ class that allows for the creation and computation of arbitrary-length integers.<br/>
-                <a href="http://github.com/limeoats/bignumber" target="_blank">Click here</a> to view the source code and download the library. 
+                <a href="http://bit.ly/1qIlgvt" target="_blank">Click here</a> to view the source code and download the library. 
             </p>
         </div>
       </div>
