updated game info

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>The Truth</h4></a>
+            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>Seasons of Collida</h4></a>
             <p>
-                The time has finally come for me to begin development of my new game, <em>The Truth</em>.<br/>
-                This will be a 3D 3rd Person Collectathon game with a strong focus on satisfying physics and enjoyable gameplay.<br/>
+                The time has finally come for me to begin development of my new game, <em>Seasons of Collida</em>.<br/>
+                This will be a 2D Action-Adventure game with some RPG elements mixed in.<br/>
                 For more information, please check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.
             </p>
         </div>
