--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="project-icons">
         <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
         <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="Youtube" /></a>
-        <a href="https://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
+        <a href="https://www.patreon.com/limeoats" target="_blank"><img src="images/patreon-icon.png" title="Patreon" id="patreonButton" /></a>
         <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
         <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
         <a href="https://discord.gg/0g6ksoTuyf4TJKqh" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
@@ -69,10 +69,10 @@
       <div>
         <h3>Current projects</h3>
         <div class="subsection">
-            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>Seasons of Collida</h4></a>
+            <a href="http://www.patreon.com/limeoats" target="_blank"><h4>The Treetop</h4></a>
             <p>
-                The time has finally come for me to begin development of my new game, <em>Seasons of Collida</em>.<br/>
-                This will be a 2D Action-Adventure game with some RPG elements mixed in.<br/>
+                The time has finally come for me to begin development of my new game, <em>The Treetop</em>.<br/>
+                This will be a 2D Action-Adventure platforming game with some very visually appealing mechanics.<br/>
                 For more information, please check out my <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.
             </p>
         </div>
