--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Limeoats | 3D Lagging Camera in Unity</title>
+    <link rel="canonical" href="http://www.limeoats.com/3d-lagging-camera-unity.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="stylesheets/syntaxhighlight.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -37,6 +38,17 @@
     <script src="javascripts/highlight.pack.js"></script>
     <script src="javascripts/main.js" type="text/javascript"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    
+    <script>
+        //Google analytics
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-78321209-1', 'auto');
+        ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <section class="page-header">
